# cs107-FinalProject

./: .coverage  .travis.yml  README.md  setup.cfg
docs/: README.md  documentation.md  milestone1.md  milestone2.md  milestone2.py  milestone2_progress.md
src/: .coverage  AutoDiff.py  DualNum.py  ReverseMode.py  test_AutoDiff.py  test_DualNum.py  test_ReverseMode.py
src/autodiff/: __init__.py  autodiff.py
src/autodiff_AnonCats.egg-info/: PKG-INFO  SOURCES.txt
src/dualnum/: Untitled.ipynb  __init__.py
src/dualnum/.ipynb_checkpoints/: DualNum-checkpoint.py
tests/: run_tests.sh  test.py  test_AutoDiff.py  test_DualNum.py
tests/.ipynb_checkpoints/: test_DualNum-checkpoint.py
