[metadata]
name = autodiff-AnonCats
version = 0.1.1
author = Zachary Brown
author_email = zachbrown@college.harvard.edu
description = A package for automatic differentiation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cs107-anonymous-cats/cs107-FinalProject
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
